solved the first to challenges

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="script" href="buttons.js">
+
+
 </head>
 <body>
 
@@ -59,6 +62,26 @@
 
 <script>
 
+   function removeTransition(e) {
+    if(e.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+    };
+
+    function play(e){
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    if(!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+    }
+
+  window.addEventListener('keydown', play)
+
+ 
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
 </script>
 
 
