--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,41 @@
       background:black;
       position: absolute;
       top:50%;
+      transform: rotate(90deg);
+      transform-origin: 100%;
+      transition: all 0.5s;
+      transition-timing-function: cubic-bezier(0.55, 0.09, 0.43, 2.86);
     }
 
   </style>
 
   <script>
+const secondHand = document.querySelector('.second-hand');
+const minHand = document.querySelector('.min-hand');
+const hourHand = document.querySelector('.hour-hand');
 
 
+function setDate() {
+  const now = new Date;
+  const seconds = now.getSeconds();
+  const secondsDegree = ((seconds / 60 ) * 360) + 90;
+  secondHand.style.transform = `rotate(${secondsDegree}deg)`
+
+  const minutes = now.getMinutes();
+  console.log(minutes);
+  const minutesDegree = ((minutes / 60 ) * 360) + 90;
+  minHand.style.transform = `rotate(${minutesDegree}deg)`
+
+  const hour = now.getHours();
+  const hourDegree = ((hour / 12 ) * 360) + 90;
+  hourHand.style.transform = `rotate(${hourDegree}deg)`
+
+
+}
+
+
+
+setInterval(setDate, 1000);
   </script>
 </body>
 </html>
