--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
@@ -8,6 +9,7 @@
 
 
 </head>
+
 <body>
 
 
@@ -60,30 +62,26 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
+    function playAudio(e) {
+      const audio = document.querySelector(`audio[data-key='${e.keyCode}']`);
+      const key = document.querySelector(`div[data-key='${e.keyCode}']`);
 
-   function removeTransition(e) {
-    if(e.propertyName !== 'transform') return;
-    this.classList.remove('playing');
-    };
+      if (!audio) return;
+      audio.currentTime = 0;
+      audio.play();
 
-    function play(e){
-    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-    
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    if(!audio) return;
-    audio.currentTime = 0;
-    audio.play();
-    key.classList.add('playing');
+      key.classList.add('playing');
     }
 
-  window.addEventListener('keydown', play)
-
- 
-  const keys = document.querySelectorAll('.key');
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition))
-</script>
+    function removePlaying(e) {
+      if (e.propertyName !== "transform") return;
+      this.classList.remove('playing')
+    }
+    const keys = document.querySelectorAll(".key")
+    keys.forEach(key => key.addEventListener("transitionend", removePlaying))
+    document.addEventListener("keydown", playAudio)
+  </script>
 
 
 </body>
-</html>
