--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
 </head>
+
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
     </div>
+  </div>
 
 
   <style>
     html {
-      background:#018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
-      background-size:cover;
-      font-family:'helvetica neue';
+      background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      background-size: cover;
+      font-family: 'helvetica neue';
       text-align: center;
       font-size: 10px;
     }
@@ -28,8 +30,8 @@
     body {
       margin: 0;
       font-size: 2rem;
-      display:flex;
-      flex:1;
+      display: flex;
+      flex: 1;
       min-height: 100vh;
       align-items: center;
     }
@@ -37,66 +39,66 @@
     .clock {
       width: 30rem;
       height: 30rem;
-      border:20px solid white;
-      border-radius:50%;
-      margin:50px auto;
+      border: 20px solid white;
+      border-radius: 50%;
+      margin: 50px auto;
       position: relative;
-      padding:2rem;
+      padding: 2rem;
       box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
+        0 0 0 4px rgba(0, 0, 0, 0.1),
         inset 0 0 0 3px #EFEFEF,
         inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+        0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-3px);
+      /* account for the height of the clock hands */
     }
 
     .hand {
-      width:50%;
-      height:6px;
-      background:black;
+      width: 50%;
+      height: 6px;
+      background: black;
       position: absolute;
-      top:50%;
+      top: 50%;
       transform: rotate(90deg);
-      transform-origin: 100%;
       transition: all 0.5s;
       transition-timing-function: cubic-bezier(0.55, 0.09, 0.43, 2.86);
+      transform-origin: right
     }
 
+    .second-hand {
+      transform: rotate(70deg);
+
+    }
+
+    .min-hand {}
+
+    .hour-hand {}
   </style>
 
+
   <script>
-const secondHand = document.querySelector('.second-hand');
-const minHand = document.querySelector('.min-hand');
-const hourHand = document.querySelector('.hour-hand');
+    const secondHand = document.querySelector('.second-hand')
+    const minHand = document.querySelector('.min-hand')
+    const hourHand = document.querySelector('.hour-hand')
+    const secondDegree = 360 / 60
+    const minuteDegree = 360 / 60
+    const hourDegree = 360 / 12
 
+    let currdate = new Date()
+    let currSecondsDegree = currdate.getSeconds() * secondDegree
+    let currMinutesDegree = currdate.getMinutes() * minuteDegree
+    let currHoursDegree = currdate.getHours() * hourDegree
 
-function setDate() {
-  const now = new Date;
-  const seconds = now.getSeconds();
-  const secondsDegree = ((seconds / 60 ) * 360) + 90;
-  secondHand.style.transform = `rotate(${secondsDegree}deg)`
-
-  const minutes = now.getMinutes();
-  console.log(minutes);
-  const minutesDegree = ((minutes / 60 ) * 360) + 90;
-  minHand.style.transform = `rotate(${minutesDegree}deg)`
-
-  const hour = now.getHours();
-  const hourDegree = ((hour / 12 ) * 360) + 90;
-  hourHand.style.transform = `rotate(${hourDegree}deg)`
-
-
-}
-
-
-
-setInterval(setDate, 1000);
+    secondHand.style.transform = `rotate(${currSecondsDegree}deg)`
+    minHand.style.transform = `rotate(${currMinutesDegree}deg)`
+    hourHand.style.transform = `rotate(${currHoursDegree}deg)`
   </script>
 </body>
+
 </html>
