--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
 </head>
+
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
 
@@ -30,12 +32,13 @@
     img {
       padding: var(--spacing);
       background: var(--base);
-      filter: blur(var(--base));
+      filter: blur(var(--blur));
     }
 
-    .hi {
+    .hl {
       color: var(--base)
     }
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -54,12 +57,24 @@
     }
 
     input {
-      width:100px;
+      width: 100px;
     }
   </style>
 
   <script>
+    const inputs = document.querySelectorAll(".controls input")
+
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || ''
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
+    }
+
+    for (const node of inputs) {
+      node.addEventListener('mousemove', handleUpdate)
+      node.addEventListener('change', handleUpdate)
+    }
   </script>
 
 </body>
+
 </html>
