--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,63 @@
     }
 
     // Regular
+  console.log("hello")
 
     // Interpolated
+  console.log("hello i am a %s string","U+1F4A9")
 
     // Styled
+    //console.log('%c I am a styled text', 'font-size:50px; background:red')
 
     // warning!
+    console.warn('Oh noooooo')
 
     // Error :|
+    console.error('Shit! you found an errorS')
 
     // Info
+    console.info('Just for fyi')
 
     // Testing
+    console.assert(1===2, 'That is wrong')
 
     // clearing
+    //console.clear()
 
     // Viewing DOM Elements
 
+    const p = document.querySelector("p")
+    console.log(p)
+    console.dir(p)
+
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    console.count('Max')
+    console.count('Max')
+    console.count('Max')
+    console.count('Max')
+    console.count('Max')
+    console.count('Max')
+    console.count('Max')
 
     // timing
+    console.time('fetching data')
+    fetch('https://api.github.com/users/wesbos')
+      .then(data => data.json())
+      .then(data => {
+        console.log(data)
+        console.timeEnd('fetching data')
+      })
+
+      console.table(dogs)
 
   </script>
 </body>
